[package]
name = "rxh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
http-body-util = "0.1.0-rc.1"
bytes = "1"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
