[package]
name = "rxh"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "HTTP reverse proxy & load balancer"
repository = "https://github.com/antoniosarosi/rxh"
readme = "README.md"
keywords = ["reverse", "proxy", "http"]
categories = ["web-programming::http-server", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = "0.1.0-rc.2"
bytes = "1"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"

[dev-dependencies]
tempfile = "3"
